@@ -1,7 +1,7 @@
 Package: pedometrics
 Title: Pedometric Tools and Techniques
-Version: 0.2-2
-Date: 2014-10-02
+Version: 0.2-3
+Date: 2014-10-07
 Authors@R: c(person("Alessandro Samuel-Rosa", role = c("aut", "cre"), email = "alessandrosamuelrosa@gmail.com"),
 	     person("Lucia Helena Cunha dos Anjos", role = "ths", email = "lanjos@ufrrj.br"),
 	     person("Gustavo de Mattos Vasques", role = "ths", email = "gustavo.vasques@embrapa.br"),
