@@ -2,6 +2,16 @@
 
 \title{News for Package \pkg{pedometrics}}
 
+\section{Changes in version 0.2-3 (2014-10-07)}{
+  \itemize{
+    \item Corrected bugs in functions objPairs(), objPoints(), pairs_per_lag(),
+    points_per_lag() and spJitter(). Added new criterion to objPairs() and
+    objPoints(). Added new method to spJitter() (finite set of candidate
+    locations). Most of the changes speed up the functions and increase
+    their functionalities.
+  }
+}
+
 \section{Changes in version 0.2-2 (2014-10-02)}{
   \itemize{
     \item Included functions objPairs(), objPoints(), pairs_per_lag() and 
